Fix topnav on mobile

--- a/ElastosBountyProgram/front-end/src/style/mobile.scss
+++ b/ElastosBountyProgram/front-end/src/style/mobile.scss
@@ -41,7 +41,7 @@
         }
 
         &.mobile {
-          padding-left: 0;
+          padding: 24px;
           display: block;
           float: right;
           font-size: 150%;
